src/objects/DeviceApplicationAssoc__c.object
<CustomObject>
    <fields>
        <fullName>APC__c</fullName>
        <formula>Device__r.APC_code__c</formula>
        <inlineHelpText>From the related Device object</inlineHelpText>
        <label>APC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>(Application__r.AcctOwnerApp__r.FirstName &amp; &quot; &quot; &amp;  Application__r.AcctOwnerApp__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Application__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcctOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Alpha__c</fullName>
        <label>Actual Alpha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Beta__c</fullName>
        <label>Actual Beta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_GM_Release_Candidate__c</fullName>
        <label>Actual GM Release Candidate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_GM__c</fullName>
        <label>Actual GM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <description>AppID, from Application object</description>
        <formula>Application__r.Application_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AppID, from Application object</inlineHelpText>
        <label>AppID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Available_For_Use__c</fullName>
        <description>From Application record</description>
        <formula>IF(Application__r.Available_For_Use__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>From Application record</inlineHelpText>
        <label>App Available For Use?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Item_State__c</fullName>
        <inlineHelpText>The item state of this DevApp.</inlineHelpText>
        <label>DevApp Item State</label>
        <picklist>
            <picklistValues>
                <fullName>10 - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Prelim</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>32 - Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - Full Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 - Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Risk_Flag_Condition__c</fullName>
        <formula>IF(text(App_Risk_Flag__c ) = &quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;),
IF(text(App_Risk_Flag__c ) = &quot;Yellow&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;),
IF(text(App_Risk_Flag__c ) = &quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;),
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Risk Flag Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Risk_Flag__c</fullName>
        <label>App Risk Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_SubType__c</fullName>
        <formula>text(Application__r.Application_Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App SubType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Category__c</fullName>
        <formula>text(Application__r.Application_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Decision__c</fullName>
        <formula>TEXT( Application__r.Application_Contract_Decision__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract_Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_LRB_Approved_Devic__c</fullName>
        <formula>Application__r.Application_Contract_LRB_Approved_Device__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract_LRB_Approved_Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_LRB_Approved_Region__c</fullName>
        <formula>Application__r.Application_Contract_LRB_Approved_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract_LRB_Approved_Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_LRB_Pipeline_ID__c</fullName>
        <formula>Application__r.Application_Contract_LRB_Pipeline_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract_LRB_Pipeline_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Name__c</fullName>
        <description>From related Application record</description>
        <formula>Application__r.Application_Contract_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Application record</inlineHelpText>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Number__c</fullName>
        <description>From related Application record</description>
        <formula>Application__r.Application_Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Application record</inlineHelpText>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Phase__c</fullName>
        <description>From related Application record</description>
        <formula>Application__r.Application_Contract_Phase__c</formula>
        <inlineHelpText>From related Application record</inlineHelpText>
        <label>Contract Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Status__c</fullName>
        <description>From related Application record</description>
        <formula>Application__r.Application_Contract_Status__c</formula>
        <inlineHelpText>From related Application record</inlineHelpText>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Governing_EndDate__c</fullName>
        <description>From related Application record</description>
        <formula>Application__r.Application_Contract_Governing_End_Date__c</formula>
        <inlineHelpText>From related Application record</inlineHelpText>
        <label>Governing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Group__c</fullName>
        <formula>Application__r.Application_Group__c</formula>
        <label>Application Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Manager_Selection_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Manager Selection Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001zkNgEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person who is responsible for delivering this application from the vendor to the software team on this particular device.</description>
        <inlineHelpText>This is the person who is responsible for delivering this application from the vendor to the software team on this particular device.</inlineHelpText>
        <label>Application Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001zYsGEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Mgr_Selection_Approval__c</fullName>
        <label>Application Mgr Selection Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Source_Id__c</fullName>
        <label>Application Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <formula>text(Application__r.Application_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The application type is defined at the application level, and is shown here for reference.</inlineHelpText>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>R00N40000001hPEFEA2</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This is MotoReady&apos;s final approval of this application on this Device. This field is what shows through to the device object to show the MotoReady status of this app on this device.</description>
        <inlineHelpText>This is MotoReady&apos;s final approval of this application on this Device. This field is what shows through to the device object to show the MotoReady status of this app on this device.</inlineHelpText>
        <label>AIF Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_furnished__c</fullName>
        <formula>text(Application__r.Carrier_Furnished__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier_furnished</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_Details__c</fullName>
        <inlineHelpText>Only required if the application is conditionally approved</inlineHelpText>
        <label>Conditional Approval Details</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_of_Budget_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmation of Budget Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_of_Budget_Royalties__c</fullName>
        <label>Confirmation of Budget Royalties</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmation_of_Schedule_from_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation of Schedule from 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Let_Expire__c</fullName>
        <description>From Application object</description>
        <formula>IF((Application__r.Application_Contract_Let_Expire__c), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Application object</inlineHelpText>
        <label>Contract Let Expire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <formula>(Application__r.Application_Contract_Owner__r.FirstName &amp; &quot; &quot; &amp; Application__r.Application_Contract_Owner__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTS_Approval__c</fullName>
        <label>SDS Approval</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTS Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTS_Support__c</fullName>
        <label>SDS Support</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTS_Support_of_Included_API_s__c</fullName>
        <label>DTS Support of Included API&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DevApp_Item_Effective_Date__c</fullName>
        <label>DevApp Item Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevApps_EFF_Date_Match__c</fullName>
        <formula>IF( DevApp_Item_Effective_Date__c = Device__r.SW_Kit__r.Effective_Date__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Does the DevApp Effective Date Match the SW KIT Effective Date? By default these should all match.</inlineHelpText>
        <label>DevApps EFF Date Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceID__c</fullName>
        <description>From Device Object</description>
        <formula>Device__r.Device_ID__c</formula>
        <inlineHelpText>From Device Object</inlineHelpText>
        <label>DeviceID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Application_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Device_Application External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Cancelled__c</fullName>
        <formula>IF( Device__r.Cancelled__c  = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Cancelled?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Carrier__c</fullName>
        <description>Device carrier, from Device object</description>
        <formula>Device__r.Carrier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Device carrier, from Device object</inlineHelpText>
        <label>Device Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Country__c</fullName>
        <description>Device country, from Device object</description>
        <formula>Device__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Device country, from Device object</inlineHelpText>
        <label>Device Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Feature_ID__c</fullName>
        <description>&quot;Please enter the FID you use to reference this feature for your program/device if it is different from that used within SalesForce.&quot;</description>
        <inlineHelpText>&quot;Please enter the FID you use to reference this feature for your program/device if it is different from that used within SalesForce.&quot;</inlineHelpText>
        <label>Device Feature ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Fully_Approved__c</fullName>
        <formula>text(Device__r.Device_Fully_Approved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Fully Approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Product_Segment__c</fullName>
        <description>From Device Object</description>
        <formula>Device__r.Product_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Device Object</inlineHelpText>
        <label>Device Product Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_SA_Status__c</fullName>
        <description>Device Status, from the Device object -- Read Only</description>
        <formula>Device__r.SA_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Device Status, from the Device object -- Read Only</inlineHelpText>
        <label>Device SA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>R00N40000001hPE5EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Disclosure_Complete__c</fullName>
        <description>Business disclosure by MDM</description>
        <inlineHelpText>Business disclosure by MDM</inlineHelpText>
        <label>Disclosure Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure_Requested__c</fullName>
        <description>The date MOTOREADY asks the Partner Manager to disclose the business award to the developer</description>
        <inlineHelpText>The date MOTOREADY asks the Partner Manager to disclose the business award to the developer</inlineHelpText>
        <label>Disclosure Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Contract__c</fullName>
        <formula>IF( Application_Contract_Status__c = &apos;Fully Executed&apos;, true, false)</formula>
        <inlineHelpText>Is the related contract for this app Fully Executed?</inlineHelpText>
        <label>Executed Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Alpha__c</fullName>
        <label>Committed Alpha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Beta__c</fullName>
        <label>Committed Beta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_GM__c</fullName>
        <label>Committed GM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMD_Feature_ID__c</fullName>
        <description>&quot;This is the FMD feature ID tagged to this application within SF at the application level.&quot;</description>
        <formula>Application__r.FMD_Feature_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;This is the FMD feature ID tagged to this application within SF at the application level.&quot;</inlineHelpText>
        <label>FMD Feature ID - SF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMD_State__c</fullName>
        <description>This is the state of the Feature ID above in FMDB.</description>
        <inlineHelpText>This is the state of the Feature ID above in FMDB.</inlineHelpText>
        <label>FMD State</label>
        <picklist>
            <picklistValues>
                <fullName>00 - Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Lockdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Already in Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - RRB Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMD_Status_Approval__c</fullName>
        <label>FMD Status Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Unacceptable State Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMD_Status_Check_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMD Status Check Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_LATAM_Translation_Table_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For LATAM, Translation Table Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_LATAM_Translation_Table_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For LATAM, Translation Table Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMS_App__c</fullName>
        <formula>Application__r.GMS_App__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMS App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Application__r.Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_BOM__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This indicates that this software is included on the BOM for this device.  We could run into a situation where software is approved for a device, but not shipped initially, so in that case, this box would be unchecked.</description>
        <inlineHelpText>This indicates that this software is included on the BOM for this device.  We could run into a situation where software is approved for a device, but not shipped initially, so in that case, this box would be unchecked.</inlineHelpText>
        <label>Include in BOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_on_SD_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether this app will be included on an accompanying SD Card (along with the device in the box)</description>
        <inlineHelpText>Denotes whether this app will be included on an accompanying SD Card (along with the device in the box)</inlineHelpText>
        <label>Include on SD Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LRB_Approval__c</fullName>
        <label>LRB Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LRB_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LRB Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Launch_MFG_Site__c</fullName>
        <formula>Device__r.Launch_MFG_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch MFG Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Device_for_MOTOREADY__c</fullName>
        <formula>IF(Device__r.Lead_Device_for_MOTOREADY__c =TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Device for MOTOREADY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leveraging_Motorola_Proprietary_APIs__c</fullName>
        <description>If this field is yes, click on the application link to review the actual api&apos;s used.</description>
        <formula>text(Application__r.Leveraging_Motorola_Proprietary_APIs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this field is yes, click on the application link to review the actual api&apos;s used.</inlineHelpText>
        <label>Leveraging Motorola Proprietary APIs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_COMPASS_File__c</fullName>
        <label>Link to COMPASS File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MOTOREADY_App_Status__c</fullName>
        <label>MOTOREADY App Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motoready_PM__c</fullName>
        <description>MOTOREADY PM, from the Device object</description>
        <formula>(Device__r.MOTOREADY_Preload_Program_Manager__r.FirstName) &amp; &quot; &quot;&amp; (Device__r.MOTOREADY_Preload_Program_Manager__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MOTOREADY PM, from the Device object</inlineHelpText>
        <label>Motoready_PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Checklist_Approval__c</fullName>
        <label>Partner Manager Checklist Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Checklist_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Manager Checklist Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_App_Mgr_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past App Mgr Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Budget_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Budget Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_LRB_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past LRB Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Partner_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Partner Manager Approval</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>